ros2_ws/log/build_2024-05-15_15-24-53/py_launch/stderr.log
  File "/home/joe/workspaces/ros2_ws/install/py_launch/lib/python3.10/site-packages/py_launch/launch.py", line 43
    Node(
    ^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

